manifests/landing.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app1-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-page
  namespace: app1-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: landing-page
  template:
    metadata:
      labels:
        app: landing-page
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: landing-page
      containers:
        - name: landing-page-container
          image: gauravgirase/ingress:v1.0.0
          ports:
            - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: landing-page-svc
  namespace: app1-ns
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /index.html
spec:
  selector:
    app: landing-page
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
